<resources>
    <string name="app_name">Duodecimal Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="heading_easy">Easy</string>
    <string name="heading_hard">Hard</string>
    <string name="heading_ranking">Ranking</string>


    <string name="btn_show_result">Show Result</string>
    <string name="btn_reset">Reset</string>
    <string name="hidden_result">***</string>


    <string name="btn_new">New</string>

    <string name="column_name">Name</string>
    <string name="column_point">Points</string>
    <string name="sumSign">+</string>
    <string name="emptyDigitResult">--</string>

</resources>
