<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arnaumarti.calculator.fragments.RankingFragment">

    <TextView
        android:text="@string/heading_ranking"
        style="@style/tabHeading" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNum"
            style="@style/txtViewsListRanking.weightColumnNum"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textViewName"
            style="@style/txtViewsListRanking.weightColumnName"
            android:text="@string/column_name"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textViewPoints"
            style="@style/txtViewsListRanking.weightColumnPoints"
            android:text="@string/column_point"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewRanking"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
